Add all navbar items to page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Youtube</title>
 </head>
 <body>
-    
+    <div id="navbar">
+        <img class="icon" src="assets/three-bars-menu.png" />
+        <img class="icon" src="assets/youtube-logo.png" />
+        <input type="text" />
+        <img id="search-button" src="assets/magnifying-glass.png" />
+        <img class="icon" src="assets/video-icon.png" />
+        <img class="icon" src="assets/apps-icon.png" />
+        <img class="icon" src="assets/notifications-icon.png" />
+        <img class="icon" src="assets/sign-in.png" />
+    </div>
 </body>
 </html>
