Fix positioning of navbar elements

--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube</title>
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
 <body>
     <div id="navbar">
-        <img class="icon" src="assets/three-bars-menu.png" />
-        <img class="icon" src="assets/youtube-logo.png" />
-        <input type="text" />
-        <img id="search-button" src="assets/magnifying-glass.png" />
-        <img class="icon" src="assets/video-icon.png" />
-        <img class="icon" src="assets/apps-icon.png" />
-        <img class="icon" src="assets/notifications-icon.png" />
-        <img class="icon" src="assets/sign-in.png" />
+        <div id="navbar-left">
+            <img class="icon" src="assets/three-bars-menu.png" />
+            <img class="icon" src="assets/youtube-logo.png" />
+        </div>
+        <div id="navbar-center">
+            <input type="text" />
+            <img id="search-button" src="assets/magnifying-glass.png" />
+        </div>
+        <div id="navbar-right">
+            <img class="icon" src="assets/video-icon.png" />
+            <img class="icon" src="assets/apps-icon.png" />
+            <img class="icon" src="assets/notifications-icon.png" />
+            <img class="icon" src="assets/sign-in.png" />
+        </div>
     </div>
 </body>
 </html>
