Add the video to the page

--- a/index.html
+++ b/index.html
@@ -23,5 +23,26 @@
             <img class="icon" src="assets/sign-in.png" />
         </div>
     </div>
+
+        <div id="content">
+            <div id="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/CvBfHwUxHIk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+
+            <div id="video-info">
+
+            </div>
+
+            <div id="comments">
+
+            </div>
+
+            <div id="recommended-videos">
+
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
