Add description content to page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,19 @@
             </div>
 
             <div id="video-info">
+                <h1>Rihanna - Umbrella</h1>
+                <h3>588,545,434 views <span>&#8226;</span> Dec 13, 2009</h3>
+            </div>
 
+            <div id="description">
+                <img src="assets/artist-dp.png" />
+                <div id="description-text">
+                    <h2>Rihanna <span>&#119136;</span></h2>
+                    <h3>35.1M subscribers</h3>
+
+                    <p> REMASTERED IN HD!</p>
+                </div>
+                <button id="subscribe-button">SUBSCRIBE</button>
             </div>
 
             <div id="comments">
