--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
             <div id="video-info">
                 <h1>Rihanna - Umbrella</h1>
-                <h3>588,545,434 views <span>&#8226;</span> Dec 13, 2009</h3>
+                <h4>588,545,434 views <span>&#8226;</span> Dec 13, 2009</h4>
             </div>
 
             <div id="description">
                 <img src="assets/artist-dp.png" />
                 <div id="description-text">
                     <h2>Rihanna <span>&#119136;</span></h2>
-                    <h3>35.1M subscribers</h3>
+                    <h4>35.1M subscribers</h4>
 
                     <p> REMASTERED IN HD!</p>
                 </div>
@@ -47,11 +47,35 @@
             </div>
 
             <div id="comments">
-
+                <div id="comments-header">
+                    <h3>111,908 Comments</h3>
+                    <button>SORT BY</button>
+                </div>
+                <div id="comment-input">
+                    <img src="assets/user-icon.png" />
+                    <input type="text" placeholder="Add a public comment">
+                </div>
+                <div id="first-comment">
+                    <img src="assets/other-user-icon-1.png" />
+                    <div class="comment">
+                        <h3>Chinezu</h3>
+                        <h4>4 months ago</h4>
+                        <p> Let's be honest. <br><br> We didn't get this in our recommendations,
+                            we searched for this.</p>
+                    </div>
+                </div>
             </div>
 
             <div id="recommended-videos">
-
+                <h2>Up next</h2>
+                <div id="next-video-0">
+                    <img src="assets/up-next-video.png"></img>
+                    <h3>Rihanna - Diamonds</h3>
+                </div>
+                <div id="next-video-1">
+                    <img src="assets/up-next-video-1.png"></img>
+                    <h3>Eminem - Love the Way You Lie ft. Rihanna</h3>
+                </div>
             </div>
 
         </div>
