Fix styling and positoning of video and description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img class="icon" src="assets/youtube-logo.png" />
         </div>
         <div id="navbar-center">
-            <input type="text" />
+            <input type="text" id="search-bar"/>
             <img id="search-button" src="assets/magnifying-glass.png" />
         </div>
         <div id="navbar-right">
@@ -24,61 +24,60 @@
         </div>
     </div>
 
-        <div id="content">
-            <div id="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/CvBfHwUxHIk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                </iframe>
-            </div>
-
-            <div id="video-info">
-                <h1>Rihanna - Umbrella</h1>
-                <h4>588,545,434 views <span>&#8226;</span> Dec 13, 2009</h4>
-            </div>
-
-            <div id="description">
-                <img src="assets/artist-dp.png" />
-                <div id="description-text">
-                    <h2>Rihanna <span>&#119136;</span></h2>
-                    <h4>35.1M subscribers</h4>
-
-                    <p> REMASTERED IN HD!</p>
-                </div>
-                <button id="subscribe-button">SUBSCRIBE</button>
-            </div>
-
-            <div id="comments">
-                <div id="comments-header">
-                    <h3>111,908 Comments</h3>
-                    <button>SORT BY</button>
-                </div>
-                <div id="comment-input">
-                    <img src="assets/user-icon.png" />
-                    <input type="text" placeholder="Add a public comment">
-                </div>
-                <div id="first-comment">
-                    <img src="assets/other-user-icon-1.png" />
-                    <div class="comment">
-                        <h3>Chinezu</h3>
-                        <h4>4 months ago</h4>
-                        <p> Let's be honest. <br><br> We didn't get this in our recommendations,
-                            we searched for this.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div id="recommended-videos">
-                <h2>Up next</h2>
-                <div id="next-video-0">
-                    <img src="assets/up-next-video.png"></img>
-                    <h3>Rihanna - Diamonds</h3>
-                </div>
-                <div id="next-video-1">
-                    <img src="assets/up-next-video-1.png"></img>
-                    <h3>Eminem - Love the Way You Lie ft. Rihanna</h3>
-                </div>
-            </div>
-
+    <div id="content">
+        <div id="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/CvBfHwUxHIk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>
         </div>
+
+         <div id="video-info">
+            <h1>Rihanna - Umbrella</h1>
+             <h4>588,545,434 views <span>&#8226;</span> Dec 13, 2009</h4>
+         </div>
+
+         <div id="description">
+             <img src="assets/artist-dp.png" id="artist-dp"/>
+             <div id="description-text">
+                <h2>Rihanna <span>&#119136;</span></h2>
+                  <h4>35.1M subscribers</h4>
+
+                  <p> REMASTERED IN HD!</p>
+             </div>
+             <button id="subscribe-button">SUBSCRIBE</button>
+         </div>
+
+        <div id="comments">
+            <div id="comments-header">
+                <h3>111,908 Comments</h3>
+                <button>SORT BY</button>
+            </div>
+            <div id="comment-input">
+                <img src="assets/user-icon.png" />
+                <input type="text" placeholder="Add a public comment">
+            </div>
+            <div id="first-comment">
+                <img src="assets/other-user-icon-1.png" />
+                <div class="comment">
+                    <h3>Chinezu</h3>
+                    <h4>4 months ago</h4>
+                    <p> Let's be honest. <br><br> We didn't get this in our recommendations,
+                        we searched for this.</p>
+                </div>
+            </div>
+        </div>
+
+        <div id="recommended-videos">
+            <h2>Up next</h2>
+            <div id="next-video-0">
+                <img src="assets/up-next-video.png"></img>
+                <h3>Rihanna - Diamonds</h3>
+            </div>
+            <div id="next-video-1">
+                <img src="assets/up-next-video-1.png"></img>
+                <h3>Eminem - Love the Way You Lie ft. Rihanna</h3>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
