--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
             <div id="first-comment">
                 <img src="assets/other-user-icon-1.png" />
                 <div class="comment">
-                    <h3>Chinezu</h3>
-                    <h4>4 months ago</h4>
+                    <span class="comment-user">
+                        <h3>Chinezu</h3>
+                        <h4>4 months ago</h4>
+                    </span>
                     <p> Let's be honest. <br><br> We didn't get this in our recommendations,
                         we searched for this.</p>
                 </div>
@@ -75,6 +77,18 @@
             <div id="next-video-1">
                 <img src="assets/up-next-video-1.png"></img>
                 <h3>Eminem - Love the Way You Lie ft. Rihanna</h3>
+            </div>
+            <div id="next-video-2">
+                <img src="assets/up-next-video-2.png"></img>
+                <h3>Rihanna - Only Girl in the World</h3>
+            </div>
+            <div id="next-video-3">
+                <img src="assets/up-next-video-3.png"></img>
+                <h3>Rihanna - Work (Explicit) ft. Drake</h3>
+            </div>
+            <div id="next-video-4">
+                <img src="assets/up-next-video-4.png"></img>
+                <h3>Rihanna - Stay ft. Mikky Ekko</h3>
             </div>
         </div>
 
