Turn navbar div into nav element

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
 <body>
-    <div id="navbar">
+    <nav id="navbar">
         <div id="navbar-left">
             <img class="icon" src="assets/three-bars-menu.png" />
             <img class="icon" src="assets/youtube-logo.png" />
@@ -22,7 +22,7 @@
             <img class="icon" src="assets/notifications-icon.png" />
             <img class="icon" src="assets/sign-in.png" />
         </div>
-    </div>
+    </nav>
 
     <div id="content">
         <div id="video">
